[package]
name = "kuiba"
version = "0.0.1"
authors = ["盏一 <w@hidva.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
clap = "2.33"
anyhow = "1.0"
lazy_static = "1.4"
log = "0.4"
stderrlog = "0.5"
sqlite = "0.25"
rand = "0.7"
byteorder = "1.3"
lalrpop-util = "0.19"
nix = "0.19"
lru = "0.6.3"
static_assertions = "1"
thread_local = "1"
crc32c = "0.6"
memoffset = "0.6"


[build-dependencies]
yaml-rust = "0.4"
quote = "1.0"
proc-macro2 = "1.0"
anyhow = "1.0"

[build-dependencies.lalrpop]
version = "0.19"
features = ["lexer"]